--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.452.0",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.1",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "openai": "^4.67.3",
